force-app/main/default/objects/Contact/fields/DummyJSON_Id__c.field-meta.xml
<CustomField>
    <fullName>DummyJSON_Id__c</fullName>
    <externalId>true</externalId>
    <label>DummyJSON Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>