force-app/main/default/objects/Contact/fields/DummyJSON_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>DummyJSON_Last_Updated__c</fullName>
    <label>DummyJSON Last Updated</label>
    <type>DateTime</type>
</CustomField>