force-app/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field is used to identify the contact type.  
Job Applicant - is primarily used to identify the candidates who applies for open jobs.
Hiring Manager - is primarily used to identify the company&apos;s hiring manager for a given job posting
Recruiter - is primarily used to identify the recruiter for a given job posting</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job Applicant</fullName>
            </value>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>